@@ -18,9 +18,28 @@ module MusicBrainz
     # 'UK' or 'FR'). The dates are instances of IncompleteDate or strings which
     # must have the format 'YYYY', 'YYYY-MM' or 'YYYY-MM-DD'.
     #
+    # The format of the release medium is a URI that can be compared to the
+    # constants on this class (FORMAT_CD, FORMAT_DVD and others).
+    #
     # See:: http://musicbrainz.org/doc/ReleaseEvent.
     #
     class ReleaseEvent
+    
+      FORMAT_CD           = NS_MMD_1 + 'CD'
+      FORMAT_DVD          = NS_MMD_1 + 'DVD'
+      FORMAT_SACD         = NS_MMD_1 + 'SACD'
+      FORMAT_DUALDISC     = NS_MMD_1 + 'DualDisc'
+      FORMAT_LASERDISC    = NS_MMD_1 + 'LaserDisc'
+      FORMAT_MINIDISC     = NS_MMD_1 + 'MiniDisc'
+      FORMAT_VINYL        = NS_MMD_1 + 'Vinyl'
+      FORMAT_CASSETTE     = NS_MMD_1 + 'Cassette'
+      FORMAT_CARTRIDGE    = NS_MMD_1 + 'Cartridge'
+      FORMAT_REEL_TO_REEL = NS_MMD_1 + 'ReelToReel'
+      FORMAT_DAT          = NS_MMD_1 + 'DAT'
+      FORMAT_DIGITAL      = NS_MMD_1 + 'Digital'
+      FORMAT_WAX_CYLINDER = NS_MMD_1 + 'WaxCylinder'
+      FORMAT_PIANO_ROLL   = NS_MMD_1 + 'PianoRoll'
+      FORMAT_OTHER        = NS_MMD_1 + 'Other'
     
       # The country in which an album was released.
       # A string containing a ISO 3166 country code like
